text and image conditionally render

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,3 +13,28 @@
   font-size: 1.5em;
 }
 
+.image-home{
+  height: 100px;
+  width: 100px;
+}
+
+.card-text{
+  width: 100px;
+  height: 100px;
+  background-color: dodgerblue;
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  padding: 0;
+  margin: 0;
+  height: 100px;
+  width: 100px;
+}
+
+.gallery-card {
+  height: 300px;
+  width: 150px;
+  border: 1px solid black;
+}
