--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,7 +21,11 @@
 .card-text{
   width: 300px;
   height: 300px;
-  background-color: dodgerblue;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  background-color: rgb(248, 118, 66);
+  font-size: 25px;
   margin: 0;
   padding: 0;
 }
@@ -36,11 +40,16 @@ img {
 .gallery-card {
   height: 380px;
   width: 320px;
-  border: 1px solid black;
+  background-color: aliceblue;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 25px;
+}
+
+.gallery-card:hover{
+  box-shadow: 5px 5px 8px grey;
+  transition: box-shadow 0.3s;
 }
 
 .gallery-container{
@@ -52,4 +61,44 @@ img {
   margin-top: 10px;
   height: 300px;
   width: 300px;
+}
+
+.like-container{
+  width: 300px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  margin: 10px;
+}
+
+button{
+  border: none;
+  border-radius: 5px;
+  background-color: lightsalmon;
+  color: white;
+  font-weight: bolder;
+  width: 120px;
+  height: 45px;
+}
+
+button:hover{
+  background-color: rgb(248, 118, 66);
+  transition: .3s;
+
+}
+
+button:active{
+  border: 1px solid rgb(248, 118, 66);
+  background-color: white;
+  transition: .2s;
+  color: rgb(248, 118, 66);
+}
+
+button span {
+  padding-left: 10px;
+  font-size: large;
+}
+
+button:focus {
+  outline:0;
 }
