--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -31,6 +31,7 @@
   font-size: 25px;
   margin: 0;
   padding: 0;
+  border-radius: 5px;
 }
 
 img {
@@ -38,6 +39,7 @@ img {
   padding: 0;
   height: 300px;
   width: 300px;
+  border-radius: 5px;
 }
 
 .gallery-card {
@@ -48,6 +50,7 @@ img {
   flex-direction: column;
   align-items: center;
   margin: 25px;
+  border-radius: 5px;
 }
 
 .gallery-card:hover{
