--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,6 +9,8 @@
   padding: 1em;
   color: aliceblue;
   margin-bottom: 1em;
+  display: flex;
+  justify-content: space-around;
 }
 
 .App-title {
@@ -34,6 +36,40 @@
   border-radius: 5px;
 }
 
+.header-container{
+  text-align: center;
+  width: 40%;
+}
+
+h1 h1, p {
+  padding: 2px;
+  margin: 2px
+}
+
+.form-container{
+  width: 40%;
+  padding: 15px;
+
+}
+.form-insert{
+  padding: 15px;
+  background-color: rgb(248, 118, 66);
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+input, textarea{
+  border: none;
+  border-radius: 5px;
+  font-family: AvenirNext-Regular;
+  outline:0;
+}
+#submitButton{
+  border: 1px solid white;
+  align-self: center;
+}
 img {
   margin: 0;
   padding: 0;
