--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -152,3 +152,27 @@ button span {
 button:focus {
   outline:0;
 }
+
+#deleteButton{
+  height: 20px;
+  width: 20px;
+  margin-top: 15px;
+  background-color: #222222;
+}
+
+#deleteButton:hover{
+  background-color: #666666;
+  transition: .2s;
+}
+
+#deleteButton:active{
+  background-color: white;
+  color: #222222;
+  border: 1px solid #222222;
+  transition: .2s;
+}
+
+
+#likes{
+  margin-top: 12px;
+}
